--- a/components/meta.html
+++ b/components/meta.html
@@ -7,8 +7,9 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TYPRYG7GXC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag() {
+    dataLayer.push(arguments);
+  }
   gtag('js', new Date());
-
   gtag('config', 'G-TYPRYG7GXC');
 </script>
