--- a/components/article_related.html
+++ b/components/article_related.html
@@ -1,5 +1,6 @@
 <div style="clear:both; margin-top:10em; margin-bottom:1em;">
-    <a  id="article_related_link" href="/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90%e4%b9%8b%e3%80%8c%e8%87%ba%e3%80%81%e6%aa%af%e3%80%81%e9%a2%b1%e3%80%81%e5%8f%b0%e3%80%8d%e2%86%92%e3%80%8c%e5%8f%b0%e3%80%8d/"
+    <a id="article_related_link"
+        href="/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90%e4%b9%8b%e3%80%8c%e8%87%ba%e3%80%81%e6%aa%af%e3%80%81%e9%a2%b1%e3%80%81%e5%8f%b0%e3%80%8d%e2%86%92%e3%80%8c%e5%8f%b0%e3%80%8d/"
         target="_self" rel="dofollow" class="u40d968d20e64592e62438cec05dc6506"><!-- INLINE RELATED POSTS 1/3 //-->
         <style>
             .u40d968d20e64592e62438cec05dc6506 {
@@ -76,12 +77,16 @@
         return shuffled.slice(min);
     }
     function select_related(data, tag, n) {
-        var tag = get_random_subarray(Object.keys(data),1)[0];
-        var index = get_random_subarray(Object.keys(data[tag]),1)[0];
-        var article_related_title=document.getElementById('article_related_title');
-        var article_related_link=document.getElementById('article_related_link');
-        article_related_title.innerHTML=data[tag][index]['title'];
-        article_related_link.setAttribute('href',data[tag][index]['url']);
+        var keys = [];
+        for (var key in Object.keys(data)) {
+            keys.concat(Array(key).fill(data[key].length));
+        }
+        var tag = get_random_subarray(keys, 1)[0];
+        var index = get_random_subarray(Object.keys(data[tag]), 1)[0];
+        var article_related_title = document.getElementById('article_related_title');
+        var article_related_link = document.getElementById('article_related_link');
+        article_related_title.innerHTML = data[tag][index]['title'];
+        article_related_link.setAttribute('href', data[tag][index]['url']);
     }
-    request_json('/category_database.js', (data) => select_related(data, 1))
+    request_json('/category_database.js', (data) => select_related(data, 1));
 </script>
