--- a/components/article_related.html
+++ b/components/article_related.html
@@ -79,7 +79,7 @@
     function select_related(data, tag, n) {
         var keys = [];
         for (var key in Object.keys(data)) {
-            keys.concat(Array(key).fill(data[key].length));
+            keys.concat(Array(key).fill(Object.keys(data[key]).length));
         }
         var tag = get_random_subarray(keys, 1)[0];
         var index = get_random_subarray(Object.keys(data[tag]), 1)[0];
