--- a/components/search_script.html
+++ b/components/search_script.html
@@ -175,7 +175,7 @@
         }
     }
     check();
-    request_json('/content_database.js', (data) => select_search(data, search_keyword, page))
+    request_json('/content_database.js', (data) => select_search(data, search_keyword, page));
 </script>
 <p></p>
 <p></p>
