--- a/components/footer.html
+++ b/components/footer.html
@@ -14,6 +14,17 @@
 </p>
 <p style="font-size:13.5px;color:red;text-align:center;">（注意這裡是《大陸居民臺灣正體字講義》的靜態備用站點，您可以<a id="dynamic" href="<!--|||||main_base_url|||||-->" target="_blank">點擊這裡</a>訪問本站動態站點之對應頁面）</p>
 <script>
+    function get_query_variable(variable) {
+        var query = window.location.search.substring(1);
+        var vars = query.split("&");
+        for (var i = 0; i < vars.length; i++) {
+            var pair = vars[i].split("=");
+            if (pair[0] == variable) {
+                return pair[1];
+            }
+        }
+        return '';
+    }
     var base_url = window.location.protocol + '//' + window.location.hostname + (window.location.port ? ':' + window.location.port : '') + '/';
     var original_url = window.location.href;
     var new_url = original_url.replace(base_url, '<!--|||||main_base_url|||||-->').split('#')[0].split('?')[0].toLowerCase();
@@ -21,7 +32,14 @@
         new_url = '<!--|||||main_base_url|||||-->%E8%87%BA%E7%81%A3%E6%AD%A3%E9%AB%94%E5%AD%97%E8%88%87%E5%A4%A7%E9%99%B8%E7%B0%A1%E5%8C%96%E5%AD%97%E5%B0%8D%E7%85%A7%E7%B4%A2%E5%BC%95%E7%B8%BD%E8%A1%A8/';
     }
     else if (-1 != new_url.indexOf('/search/')) {
-        new_url = '<!--|||||main_base_url|||||-->' + new_url.split('/search/')[1];
+        var page = get_query_variable('page');
+        var search_keyword = get_query_variable('s');
+        if ('' == page) {
+            new_url = '<!--|||||main_base_url|||||-->?s=' + search_keyword;
+        }
+        else {
+            new_url = '<!--|||||main_base_url|||||-->page/' + page + '/?s=' + search_keyword;
+        }
     }
     var dynamic = document.getElementById('dynamic');
     dynamic.setAttribute('href', new_url);
