--- a/components/search_script.html
+++ b/components/search_script.html
@@ -73,7 +73,7 @@
         var title_index = 0;
         var description_index = 0;
         for (var key in data) {
-            if (('article' == data[key]['type'] || 'page' == data[key]['type'])) {
+            if ('article' == data[key]['type'] || 'page' == data[key]['type']) {
                 if (-1 != data[key]['title'].indexOf(search_keyword)) {
                     title_keys[title_index++] = key;
                 }
