--- a/components/category_script.html
+++ b/components/category_script.html
@@ -52,7 +52,7 @@
         }
         if (page < total_pages) {
             elements[index++] = page_navigation_older.outerHTML.replaceAll(' id="page_navigation_older" style="display:none;"', '').replaceAll('|||||page_index|||||', page + 1);
-            document.getElementById('next_url').setAttribute('href', window.location.href.split('?')[0] + 'page=' + (page + 1).toString());
+            document.getElementById('next_url').setAttribute('href', window.location.href.split('?')[0] + '?page=' + (page + 1).toString());
         }
         else {
             document.getElementById('next_url').setAttribute('href', window.location.href.split('?')[0]);
