--- a/components/footer.html
+++ b/components/footer.html
@@ -6,7 +6,7 @@
 <script>
     var current_year = new Date().getFullYear();
     var year = document.getElementById('year');
-    year.innerHTML = '民國' + (current_year - 1911) + '年（西元' + current_year + '）'
+    year.innerHTML = '中華民國' + (current_year - 1911) + '年（西元' + current_year + '）'
 </script>
 <p style="font-size:13.5px;text-align:center;">
     All rights have been waived by the editors. The website is dedicated to the public domain.<br />
