--- a/components/footer.html
+++ b/components/footer.html
@@ -12,6 +12,7 @@
     All rights have been waived by the editors. The website is dedicated to the public domain.<br />
     <a href="/copyright-and-disclaimer-%e7%89%88%e6%ac%8a%e5%92%8c%e5%85%8d%e8%b2%ac%e8%81%b2%e6%98%8e/">Copyright and Disclaimer (版權和免責聲明)</a>
 </p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6635771356466022" crossorigin="anonymous"></script>
 <p style="font-size:13.5px;color:red;text-align:center;">（注意這裡是《大陸居民臺灣正體字講義》的靜態備用站點，您可以<a id="dynamic" href="<!--|||||main_base_url|||||-->" target="_blank">點擊這裡</a>訪問本站動態站點之對應頁面）</p>
 <script>
     function get_query_variable(variable) {
