--- a/components/footer.html
+++ b/components/footer.html
@@ -28,10 +28,10 @@
     var base_url = window.location.protocol + '//' + window.location.hostname + (window.location.port ? ':' + window.location.port : '') + '/';
     var original_url = window.location.href;
     var new_url = original_url.replace(base_url, '<!--|||||main_base_url|||||-->').split('#')[0].split('?')[0].toLowerCase();
-    if ('<!--|||||main_base_url|||||-->%e8%87%ba%e5%bd%8e%e6%ad%a3%e9%ab%94%e5%ad%97%e8%88%87%e5%a4%a7%e9%99%b8%e7%b0%a1%e5%8c%96%e5%ad%97%e5%b0%8d%e7%85%a7%e7%b4%a2%e5%bc%95%e7%b8%bd%e8%a1%a8/' == new_url) {
+    /*if ('<!--|||||main_base_url|||||-->%e8%87%ba%e5%bd%8e%e6%ad%a3%e9%ab%94%e5%ad%97%e8%88%87%e5%a4%a7%e9%99%b8%e7%b0%a1%e5%8c%96%e5%ad%97%e5%b0%8d%e7%85%a7%e7%b4%a2%e5%bc%95%e7%b8%bd%e8%a1%a8/' == new_url) {
         new_url = '<!--|||||main_base_url|||||-->%E8%87%BA%E7%81%A3%E6%AD%A3%E9%AB%94%E5%AD%97%E8%88%87%E5%A4%A7%E9%99%B8%E7%B0%A1%E5%8C%96%E5%AD%97%E5%B0%8D%E7%85%A7%E7%B4%A2%E5%BC%95%E7%B8%BD%E8%A1%A8/';
     }
-    else if (-1 != new_url.indexOf('/search/')) {
+    else */if (-1 != new_url.indexOf('/search/')) {
         var page_1 = get_query_variable('page');
         var search_keyword_1 = get_query_variable('s');
         if ('' == page_1) {
