--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -123,32 +123,22 @@
     <div id="block-13" class="widget widget_block">
         <div class="widget-content">
             <ul>
-                <li><a href="https://dict.variants.moe.edu.tw/" target="_blank" rel="noreferrer noopener">《教育部異體字字典》</a>
-                </li>
-                <li><a href="https://www.moedict.tw/" target="_blank" rel="noreferrer noopener">《國語辭典》（萌典）</a></li>
-                <li><a href="https://stroke-order.learningweb.moe.edu.tw/" target="_blank"
-                        rel="noreferrer noopener">國字標準字體筆順學習網</a></li>
-                <li><a href="https://dict.concised.moe.edu.tw/" target="_blank" rel="noreferrer noopener">《國語辭典簡編本》</a>
-                </li>
-                <li><a href="https://dict.revised.moe.edu.tw/" target="_blank" rel="noreferrer noopener">《重編國語辭典修訂本》</a>
-                </li>
-                <li><a href="https://dict.idioms.moe.edu.tw/" target="_blank" rel="noreferrer noopener">《成語典》</a></li>
-                <li><a href="https://cdn.githubraw.com/zhmgczh/Notes-on-Traditional-Chinese-Characters-in-Taiwan-for-Mainland-Chinese-Residents/master/%E8%A3%9C%E5%85%85%E8%B3%87%E6%96%99/%E7%95%B0%E5%BD%A2%E8%A9%9E%E8%BE%A8%E6%9E%90%E6%89%8B%E5%86%8A.pdf"
-                        target="_blank" rel="noreferrer noopener">《異形詞辨析手冊》</a></li>
-                <li><a href="https://language.moe.gov.tw/result.aspx?classify_sn=23&amp;subclassify_sn=436&amp;content_sn=47"
-                        target="_blank" rel="noreferrer noopener">國字標準字體字形檔</a></li>
-                <li><a href="https://language.moe.gov.tw/001/Upload/FILES/SITE_CONTENT/M0001/HAU/haushou.htm"
-                        target="_blank" rel="noreferrer noopener">《重訂標點符號手冊》</a></li>
-                <li><a href="https://ctext.org/zh" target="_blank" rel="noreferrer noopener">中國哲學書電子化計劃</a></li>
-                <li><a href="https://humanum.arts.cuhk.edu.hk/Lexis/lexi-mf/" target="_blank"
-                        rel="noreferrer noopener">漢語多功能字庫（香港）</a></li>
-                <li><a href="https://zh.wikisource.org/wiki/%E9%80%9A%E7%94%A8%E8%A7%84%E8%8C%83%E6%B1%89%E5%AD%97%E8%A1%A8#%E9%99%84%E4%BB%B61._%E8%A7%84%E8%8C%83%E5%AD%97%E4%B8%8E%E7%B9%81%E4%BD%93%E5%AD%97%E3%80%81%E5%BC%82%E4%BD%93%E5%AD%97%E5%AF%B9%E7%85%A7%E8%A1%A8"
-                        target="_blank" rel="noreferrer noopener">《通用規範漢字表》（大陸）</a></li>
-                <li><a href="https://kanji.jitenon.jp/" target="_blank" rel="noreferrer noopener">《漢字辞典オンライン》（日本）</a>
-                </li>
-                <li><a href="http://www.zonmal.com/" target="_blank" rel="noreferrer noopener">《존 한자사전》（韓國）</a></li>
-                <li><a href="https://www.hannom-rcv.org/" target="_blank" rel="noreferrer noopener">委班復生漢喃越南（越南）</a>
-                </li>
+                <li><a href="https://dict.variants.moe.edu.tw/" target="_blank" rel="noreferrer noopener nofollow">《教育部異體字字典》</a></li>
+                <li><a href="https://www.moedict.tw/" target="_blank" rel="noreferrer noopener nofollow">《國語辭典》（萌典）</a></li>
+                <li><a href="https://stroke-order.learningweb.moe.edu.tw/" target="_blank" rel="noreferrer noopener nofollow">國字標準字體筆順學習網</a></li>
+                <li><a href="https://dict.concised.moe.edu.tw/" target="_blank" rel="noreferrer noopener nofollow">《國語辭典簡編本》</a></li>
+                <li><a href="https://dict.revised.moe.edu.tw/" target="_blank" rel="noreferrer noopener nofollow">《重編國語辭典修訂本》</a></li>
+                <li><a href="https://dict.idioms.moe.edu.tw/" target="_blank" rel="noreferrer noopener nofollow">《成語典》</a></li>
+                <li><a href="https://cdn.githubraw.com/zhmgczh/Notes-on-Traditional-Chinese-Characters-in-Taiwan-for-Mainland-Chinese-Residents/master/補充資料/異形詞辨析手冊.pdf" target="_blank" rel="noreferrer noopener nofollow">《異形詞辨析手冊》</a></li>
+                <li><a href="https://cdn.githubraw.com/zhmgczh/Notes-on-Traditional-Chinese-Characters-in-Taiwan-for-Mainland-Chinese-Residents/master/補充資料/標準字與簡化字對照手冊.pdf" target="_blank" rel="noreferrer noopener nofollow">《標準字與簡化字對照手冊》</a></li>
+                <li><a href="https://language.moe.gov.tw/result.aspx?classify_sn=23&amp;subclassify_sn=436&amp;content_sn=47" target="_blank" rel="noreferrer noopener nofollow">國字標準字體字形檔</a></li>
+                <li><a href="https://language.moe.gov.tw/001/Upload/FILES/SITE_CONTENT/M0001/HAU/haushou.htm" target="_blank" rel="noreferrer noopener nofollow">《重訂標點符號手冊》</a></li>
+                <li><a href="https://ctext.org/zh" target="_blank" rel="noreferrer noopener nofollow">中國哲學書電子化計劃</a></li>
+                <li><a href="https://humanum.arts.cuhk.edu.hk/Lexis/lexi-mf/" target="_blank" rel="noreferrer noopener nofollow">漢語多功能字庫（香港）</a></li>
+                <li><a href="https://zh.wikisource.org/wiki/%E9%80%9A%E7%94%A8%E8%A7%84%E8%8C%83%E6%B1%89%E5%AD%97%E8%A1%A8#%E9%99%84%E4%BB%B61._%E8%A7%84%E8%8C%83%E5%AD%97%E4%B8%8E%E7%B9%81%E4%BD%93%E5%AD%97%E3%80%81%E5%BC%82%E4%BD%93%E5%AD%97%E5%AF%B9%E7%85%A7%E8%A1%A8" target="_blank" rel="noreferrer noopener nofollow">《通用規範漢字表》（大陸）</a></li>
+                <li><a href="https://kanji.jitenon.jp/" target="_blank" rel="noreferrer noopener nofollow">《漢字辞典オンライン》（日本）</a></li>
+                <li><a href="http://www.zonmal.com/" target="_blank" rel="noreferrer noopener nofollow">《존 한자사전》（韓國）</a></li>
+                <li><a href="https://www.hannom-rcv.org/" target="_blank" rel="noreferrer noopener nofollow">委班復生漢喃越南（越南）</a></li>
             </ul>
         </div>
     </div>
