--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -21,14 +21,11 @@
             <div class="zeno_font_resizer_container">
                 <p class="zeno_font_resizer" style="text-align: center; font-weight: bold;">
                     <span>
-                        <a href="#"
-                            class="zeno_font_resizer_minus" title="縮小字型大小" style="font-size: 0.7em;">正<span
+                        <a href="#" class="zeno_font_resizer_minus" title="縮小字型大小" style="font-size: 0.7em;">正<span
                                 class="screen-reader-text"> 縮小字型大小。</span></a>
-                        <a href="#"
-                            class="zeno_font_resizer_reset" title="重設字型大小">正<span class="screen-reader-text">
+                        <a href="#" class="zeno_font_resizer_reset" title="重設字型大小">正<span class="screen-reader-text">
                                 重設字型大小。</span></a>
-                        <a href="#"
-                            class="zeno_font_resizer_add" title="放大字型大小" style="font-size: 1.3em;">正<span
+                        <a href="#" class="zeno_font_resizer_add" title="放大字型大小" style="font-size: 1.3em;">正<span
                                 class="screen-reader-text"> 放大字型大小。</span></a>
                     </span>
                     <input type="hidden" id="zeno_font_resizer_value" value="body">
@@ -55,8 +52,7 @@
                     alert('複製失敗。');
                 });
             </script>
-            <button id="self_address" class="copy"
-                data-clipboard-text="/">複製本頁網址</button>
+            <button id="self_address" class="copy" data-clipboard-text="/">複製本頁網址</button>
             <script>
                 var self_address = document.getElementById('self_address');
                 self_address.setAttribute('data-clipboard-text', window.location.href);
@@ -68,14 +64,13 @@
             <div class="is-style-icons wp-block-themeisle-blocks-sharing-icons"
                 id="wp-block-themeisle-blocks-sharing-icons-6d673a04">
                 <div class="social-icons-wrap"><a id="facebook_link" class="social-icon is-facebook"
-                        href="https://www.facebook.com/sharer/sharer.php?u=/&amp;title="
-                        target="_blank"><i class="fab fa-facebook-f"></i><span class="v-line"></span></a><a id="twitter_link"
-                        class="social-icon is-twitter"
-                        href="http://www.x.com/share?url=/&amp;text="
-                        target="_blank"><i class="fab fa-twitter"></i><span class="v-line"></span></a><a id="linkedin_link"
+                        href="https://www.facebook.com/sharer/sharer.php?u=/&amp;title=" target="_blank"><i
+                            class="fab fa-facebook-f"></i><span class="v-line"></span></a><a id="twitter_link"
+                        class="social-icon is-twitter" href="http://www.x.com/share?url=/&amp;text=" target="_blank"><i
+                            class="fab fa-twitter"></i><span class="v-line"></span></a><a id="linkedin_link"
                         class="social-icon is-linkedin"
-                        href="https://www.linkedin.com/shareArticle?mini=true&amp;url=/&amp;title="
-                        target="_blank"><i class="fab fa-linkedin-in"></i><span class="v-line"></span></a></div>
+                        href="https://www.linkedin.com/shareArticle?mini=true&amp;url=/&amp;title=" target="_blank"><i
+                            class="fab fa-linkedin-in"></i><span class="v-line"></span></a></div>
             </div>
             <script>
                 var facebook_link = document.getElementById('facebook_link');
@@ -89,13 +84,15 @@
     </div>
     <div id="block-21" class="widget widget_block widget_text">
         <div class="widget-content">
-            <p><a href="/%e3%80%8c%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90%e3%80%8d%e5%ad%b8%e7%bf%92%e7%b4%a2%e5%bc%95%e8%a1%a8/">「一簡多繁辨析」學習索引表</a>
+            <p><a
+                    href="/%e3%80%8c%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90%e3%80%8d%e5%ad%b8%e7%bf%92%e7%b4%a2%e5%bc%95%e8%a1%a8/">「一簡多繁辨析」學習索引表</a>
             </p>
         </div>
     </div>
     <div id="block-22" class="widget widget_block widget_text">
         <div class="widget-content">
-            <p><a href="/%e8%87%ba%e7%81%a3%e6%ad%a3%e9%ab%94%e5%ad%97%e8%88%87%e5%a4%a7%e9%99%b8%e7%b0%a1%e5%8c%96%e5%ad%97%e5%b0%8d%e7%85%a7%e7%b4%a2%e5%bc%95%e7%b8%bd%e8%a1%a8/">臺灣正體字與大陸簡化字對照索引總表</a>
+            <p><a
+                    href="/%e8%87%ba%e7%81%a3%e6%ad%a3%e9%ab%94%e5%ad%97%e8%88%87%e5%a4%a7%e9%99%b8%e7%b0%a1%e5%8c%96%e5%ad%97%e5%b0%8d%e7%85%a7%e7%b4%a2%e5%bc%95%e7%b8%bd%e8%a1%a8/">臺灣正體字與大陸簡化字對照索引總表</a>
             </p>
         </div>
     </div>
@@ -105,8 +102,7 @@
                 <li class="cat-item cat-item-18 current-cat"><a aria-current="page"
                         href="/category/%e4%b8%80%e7%b0%a1%e5%a4%9a%e7%b9%81%e8%be%a8%e6%9e%90/">一簡多繁辨析</a>
                 </li>
-                <li class="cat-item cat-item-19"><a
-                        href="/category/%e6%bc%a2%e5%ad%97%e8%b6%a3%e8%ab%87/">漢字趣談</a>
+                <li class="cat-item cat-item-19"><a href="/category/%e6%bc%a2%e5%ad%97%e8%b6%a3%e8%ab%87/">漢字趣談</a>
                 </li>
             </ul>
         </div>
@@ -123,22 +119,38 @@
     <div id="block-13" class="widget widget_block">
         <div class="widget-content">
             <ul>
-                <li><a href="https://dict.variants.moe.edu.tw/" target="_blank" rel="noreferrer noopener nofollow">《教育部異體字字典》</a></li>
-                <li><a href="https://www.moedict.tw/" target="_blank" rel="noreferrer noopener nofollow">《國語辭典》（萌典）</a></li>
-                <li><a href="https://stroke-order.learningweb.moe.edu.tw/" target="_blank" rel="noreferrer noopener nofollow">國字標準字體筆順學習網</a></li>
-                <li><a href="https://dict.concised.moe.edu.tw/" target="_blank" rel="noreferrer noopener nofollow">《國語辭典簡編本》</a></li>
-                <li><a href="https://dict.revised.moe.edu.tw/" target="_blank" rel="noreferrer noopener nofollow">《重編國語辭典修訂本》</a></li>
-                <li><a href="https://dict.idioms.moe.edu.tw/" target="_blank" rel="noreferrer noopener nofollow">《成語典》</a></li>
-                <li><a href="https://cdn.githubraw.com/zhmgczh/Notes-on-Traditional-Chinese-Characters-in-Taiwan-for-Mainland-Chinese-Residents/master/補充資料/異形詞辨析手冊.pdf" target="_blank" rel="noreferrer noopener nofollow">《異形詞辨析手冊》</a></li>
-                <li><a href="https://cdn.githubraw.com/zhmgczh/Notes-on-Traditional-Chinese-Characters-in-Taiwan-for-Mainland-Chinese-Residents/master/補充資料/標準字與簡化字對照手冊.pdf" target="_blank" rel="noreferrer noopener nofollow">《標準字與簡化字對照手冊》</a></li>
-                <li><a href="https://language.moe.gov.tw/result.aspx?classify_sn=23&amp;subclassify_sn=436&amp;content_sn=47" target="_blank" rel="noreferrer noopener nofollow">國字標準字體字形檔</a></li>
-                <li><a href="https://language.moe.gov.tw/001/Upload/FILES/SITE_CONTENT/M0001/HAU/haushou.htm" target="_blank" rel="noreferrer noopener nofollow">《重訂標點符號手冊》</a></li>
-                <li><a href="https://ctext.org/zh" target="_blank" rel="noreferrer noopener nofollow">中國哲學書電子化計劃</a></li>
-                <li><a href="https://humanum.arts.cuhk.edu.hk/Lexis/lexi-mf/" target="_blank" rel="noreferrer noopener nofollow">漢語多功能字庫（香港）</a></li>
-                <li><a href="https://zh.wikisource.org/wiki/%E9%80%9A%E7%94%A8%E8%A7%84%E8%8C%83%E6%B1%89%E5%AD%97%E8%A1%A8#%E9%99%84%E4%BB%B61._%E8%A7%84%E8%8C%83%E5%AD%97%E4%B8%8E%E7%B9%81%E4%BD%93%E5%AD%97%E3%80%81%E5%BC%82%E4%BD%93%E5%AD%97%E5%AF%B9%E7%85%A7%E8%A1%A8" target="_blank" rel="noreferrer noopener nofollow">《通用規範漢字表》（大陸）</a></li>
-                <li><a href="https://kanji.jitenon.jp/" target="_blank" rel="noreferrer noopener nofollow">《漢字辞典オンライン》（日本）</a></li>
-                <li><a href="http://www.zonmal.com/" target="_blank" rel="noreferrer noopener nofollow">《존 한자사전》（韓國）</a></li>
-                <li><a href="https://www.hannom-rcv.org/" target="_blank" rel="noreferrer noopener nofollow">委班復生漢喃越南（越南）</a></li>
+                <li><a href="https://dict.variants.moe.edu.tw/" target="_blank"
+                        rel="noreferrer noopener nofollow">《教育部異體字字典》</a></li>
+                <li><a href="https://www.moedict.tw/" target="_blank" rel="noreferrer noopener nofollow">《國語辭典》（萌典）</a>
+                </li>
+                <li><a href="https://stroke-order.learningweb.moe.edu.tw/" target="_blank"
+                        rel="noreferrer noopener nofollow">國字標準字體筆順學習網</a></li>
+                <li><a href="https://dict.concised.moe.edu.tw/" target="_blank"
+                        rel="noreferrer noopener nofollow">《國語辭典簡編本》</a></li>
+                <li><a href="https://dict.revised.moe.edu.tw/" target="_blank"
+                        rel="noreferrer noopener nofollow">《重編國語辭典修訂本》</a></li>
+                <li><a href="https://dict.idioms.moe.edu.tw/" target="_blank"
+                        rel="noreferrer noopener nofollow">《成語典》</a></li>
+                <li><a href="https://cdn.githubraw.com/zhmgczh/Notes-on-Traditional-Chinese-Characters-in-Taiwan-for-Mainland-Chinese-Residents/master/補充資料/異形詞辨析手冊.pdf"
+                        target="_blank" rel="noreferrer noopener nofollow">《異形詞辨析手冊》</a></li>
+                <li><a href="https://cdn.githubraw.com/zhmgczh/Notes-on-Traditional-Chinese-Characters-in-Taiwan-for-Mainland-Chinese-Residents/master/補充資料/標準字與簡化字對照手冊.pdf"
+                        target="_blank" rel="noreferrer noopener nofollow">《標準字與簡化字對照手冊》</a></li>
+                <li><a href="https://language.moe.gov.tw/result.aspx?classify_sn=23&amp;subclassify_sn=436&amp;content_sn=47"
+                        target="_blank" rel="noreferrer noopener nofollow">國字標準字體字形檔</a></li>
+                <li><a href="https://language.moe.gov.tw/001/Upload/FILES/SITE_CONTENT/M0001/HAU/haushou.htm"
+                        target="_blank" rel="noreferrer noopener nofollow">《重訂標點符號手冊》</a></li>
+                <li><a href="https://ctext.org/zh" target="_blank" rel="noreferrer noopener nofollow">中國哲學書電子化計劃</a>
+                </li>
+                <li><a href="https://humanum.arts.cuhk.edu.hk/Lexis/lexi-mf/" target="_blank"
+                        rel="noreferrer noopener nofollow">漢語多功能字庫（香港）</a></li>
+                <li><a href="https://zh.wikisource.org/wiki/%E9%80%9A%E7%94%A8%E8%A7%84%E8%8C%83%E6%B1%89%E5%AD%97%E8%A1%A8#%E9%99%84%E4%BB%B61._%E8%A7%84%E8%8C%83%E5%AD%97%E4%B8%8E%E7%B9%81%E4%BD%93%E5%AD%97%E3%80%81%E5%BC%82%E4%BD%93%E5%AD%97%E5%AF%B9%E7%85%A7%E8%A1%A8"
+                        target="_blank" rel="noreferrer noopener nofollow">《通用規範漢字表》（大陸）</a></li>
+                <li><a href="https://kanji.jitenon.jp/" target="_blank"
+                        rel="noreferrer noopener nofollow">《漢字辞典オンライン》（日本）</a></li>
+                <li><a href="http://www.zonmal.com/" target="_blank" rel="noreferrer noopener nofollow">《존 한자사전》（韓國）</a>
+                </li>
+                <li><a href="https://www.hannom-rcv.org/" target="_blank"
+                        rel="noreferrer noopener nofollow">委班復生漢喃越南（越南）</a></li>
             </ul>
         </div>
     </div>
