--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -23,8 +23,7 @@
                     <span>
                         <a href="#" class="zeno_font_resizer_minus" title="縮小字型大小" style="font-size: 0.7em;">正<span
                                 class="screen-reader-text"> 縮小字型大小。</span></a>
-                        <a href="#" class="zeno_font_resizer_reset" title="重設字型大小">正<span class="screen-reader-text">
-                                重設字型大小。</span></a>
+                        <a href="#" class="zeno_font_resizer_reset" title="重設字型大小">正<span class="screen-reader-text"> 重設字型大小。</span></a>
                         <a href="#" class="zeno_font_resizer_add" title="放大字型大小" style="font-size: 1.3em;">正<span
                                 class="screen-reader-text"> 放大字型大小。</span></a>
                     </span>
