--- a/components/meta.html
+++ b/components/meta.html
@@ -13,4 +13,4 @@
   gtag('js', new Date());
   gtag('config', 'G-TYPRYG7GXC');
 </script>
-<!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6635771356466022" crossorigin="anonymous"></script> -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6635771356466022" crossorigin="anonymous"></script>
