--- a/front-end_files/css/style.css
+++ b/front-end_files/css/style.css
@@ -1302,7 +1302,8 @@ input[type="submit"]:hover {
 .post-categories a:hover { text-decoration: underline; }
 
 .post-title {
-	font-family: 'Merriweather', Georgia, serif;
+	/* font-family: 'Merriweather', Georgia, serif; */
+	font-family: eduSong;
 	font-size: 1.5em;
 	line-height: 135%;
 	font-weight: 900;
